udpate + fix admin loggin